tests/ui/error-should-say-copy-not-pod.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/error-should-say-copy-not-pod.rs:6:17
   |
LL |     check_bound("nocopy".to_string());
   |     ----------- ^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `String`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `check_bound`
  --> $DIR/error-should-say-copy-not-pod.rs:3:18
   |
LL | fn check_bound<T:Copy>(_: T) {}
   |                  ^^^^ required by this bound in `check_bound`
help: consider removing this method call, as the receiver has type `&'static str` and `&'static str: Copy` trivially holds
   |
LL -     check_bound("nocopy".to_string());
LL +     check_bound("nocopy");
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
